vlib/v/checker/tests/modules/params_private_struct_visibility.out
vlib/v/checker/tests/modules/params_private_struct_visibility/main.v:6:6: error: struct `mod.Param` was declared as private to module `mod`, so it can not be used inside module `main`
    4 | 
    5 | fn main() {
    6 |     mod.foo()
      |         ~~~~~
    7 | }
vlib/v/checker/tests/modules/params_private_struct_visibility/main.v:6:6: error: type `mod.Param` is private
    4 | 
    5 | fn main() {
    6 |     mod.foo()
      |         ~~~~~
    7 | }
